# NanoInfer

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  main.cpp
benchmarks/: benchmark_ttft_tpot.py
cmake/: dependencies.cmake
python/: requirements.txt  tokenizer.py
src/: cuda_device_buffer.cpp  cuda_device_buffer.h  device_arena.hpp  grouped_query_attention.cpp  grouped_query_attention.h  helper.hpp  inference.cpp  inference.h  kernels.cu  kernels.h  llama.cpp  llama.h  llama_weights.cpp  llama_weights.h  macro.h  main.cpp  residual_connection.cu  residual_connection.h  rope.cu  rope.h  softmax.cu  softmax.h  swiglu.cu  swiglu.h  tensor.h  tokenizer_bridge.cpp  tokenizer_bridge.h
src/kernels/: attention_softmax.cu  greedy_decoding.cu  greedy_decoding.h  grouped_query_attention.cu  grouped_query_attention.h  kv_cache.cu  kv_cache.h  residual_connection.cu  rms_norm.cu  rms_norm.h  rope.cu  rope.h  swiglu.cu  token_embedding.cu  token_embedding.h
tests/: e2e_alignment.py  e2e_alignment_matrix.py  e2e_tolerant_alignment.py  kernel_unit_tests.cu  layer_alignment.py
tools/: run_prompt.cpp
